Add new VM Option required by Blockhound